add different colors to three columns

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 </head>
   <body>
     <h1>Julian's Interior Decoration</h1>
-    <div class="section">
+    <div class="section1">
       <h2>Before</h2>
       <img src="img/before.jpg">
       <p>This is what the house looked like before our rennovations! doesn't it look horrible?! It took us many hours to even scratch the surface of this insane job!</p>
     </div>
-    <div class="section">
+    <div class="section2">
       <h2>During</h2>
       <img src="img/during.jpg">
       <p>This is during the rennovation. You can really see the progress we made at this point. Although it isn't complete, the essential pieces are together at this point, and you cant start to see the progess.</p>
     </div>
-    <div class="section">
+    <div class="section3">
       <h2>After</h2>
       <img src="img/after.jpg">
       <p>This is the final product. As you can see, we made a lot of progress. We are very proud of what we did here, it is probably one of our best rennovations to date. The owner was so happy about it, he was crying!</p>
